org/force-app/main/default/objects/Account/fields/Legacy_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Account_Number__c</fullName>
    <label>Legacy Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>