org/force-app/main/default/objects/Account/fields/Old_Segment__c.field-meta.xml
<CustomField>
    <fullName>Old_Segment__c</fullName>
    <label>Old Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>