org/force-app/main/default/objects/Account/fields/Temp_Score__c.field-meta.xml
<CustomField>
    <fullName>Temp_Score__c</fullName>
    <label>Temp Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>