org/force-app/main/default/objects/Account/fields/Test_Do_Not_Delete__c.field-meta.xml
<CustomField>
    <fullName>Test_Do_Not_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Do Not Delete</label>
    <type>Checkbox</type>
</CustomField>